added some functionality

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <app-nav-bar></app-nav-bar>
     <app-main></app-main>
     <app-player-section></app-player-section>
+    <!-- <app-welcome></app-welcome> -->
+    
 </body>
 
 </html>
